--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -3,7 +3,7 @@ html,
 body {
   margin: 0px;
   box-sizing: border-box;
-  background-color: $primary-almost-white;
+  background-color: #fff9ef;
 }
 .gridWrapper {
   display: grid;
@@ -31,7 +31,6 @@ body {
   // height: 3004px;
 }
 .landingpageContainer {
-  background-color: red;
   min-height: 100vh;
   grid-area: lC;
 }
