--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -3,50 +3,51 @@ html,
 body {
   margin: 0px;
   box-sizing: border-box;
-  background-color: #fff9ef;
-}
-.gridWrapper {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(14, 1fr);
-  grid-auto-columns: 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    'lC lC lC lC'
-    'lC lC lC lC'
-    'lC lC lC lC'
-    'lC lC lC lC'
-    'pC pC pC pC'
-    'pC pC pC pC'
-    'mC mC mC mC'
-    'nC nC nC nC'
-    'nC nC nC nC'
-    'nC nC nC nC'
-    'nC nC nC nC'
-    'nC nC nC nC'
-    'fC fC fC fC'
-    'fC fC fC fC';
-  min-width: 390px;
-  // height: 3004px;
-}
-.landingpageContainer {
-  min-height: 100vh;
-  grid-area: lC;
-}
-.productsContainer {
-  background-color: gray;
-  grid-area: pC;
-}
-.mediaBannerContainer {
-  background-color: green;
-  grid-area: mC;
-}
-.newsContainer {
-  background-color: hotpink;
-  grid-area: nC;
-}
-.footerContainer {
-  background-color: indigo;
-  grid-area: fC;
+  background-color: white;
+
+  .gridWrapper {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(14, 1fr);
+    grid-auto-columns: 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      'lC lC lC lC'
+      'lC lC lC lC'
+      'lC lC lC lC'
+      'lC lC lC lC'
+      'pC pC pC pC'
+      'pC pC pC pC'
+      'mC mC mC mC'
+      'nC nC nC nC'
+      'nC nC nC nC'
+      'nC nC nC nC'
+      'nC nC nC nC'
+      'nC nC nC nC'
+      'fC fC fC fC'
+      'fC fC fC fC';
+    min-width: 390px;
+    // height: 3004px;
+  }
+  .landingpageContainer {
+    min-height: 100vh;
+    grid-area: lC;
+  }
+  .productsContainer {
+    background-color: gray;
+    grid-area: pC;
+  }
+  .mediaBannerContainer {
+    background-color: green;
+    grid-area: mC;
+  }
+  .newsContainer {
+    background-color: hotpink;
+    grid-area: nC;
+  }
+  .footerContainer {
+    background-color: indigo;
+    grid-area: fC;
+  }
 }
