--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -3,7 +3,8 @@ html,
 body {
   margin: 0px;
   box-sizing: border-box;
-  background-color: white;
+  background-color: $primary-almost-white;
+  font-family: $normal-font;
 
   .gridWrapper {
     display: grid;
@@ -29,9 +30,10 @@ body {
       'fC fC fC fC';
     min-width: 390px;
     // height: 3004px;
+    margin: 20px 25px 5px 25px;
   }
   .landingpageContainer {
-    min-height: 100vh;
+    height: 100vh;
     grid-area: lC;
   }
   .productsContainer {
