--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -7,49 +7,26 @@ body {
   font-family: $normal-font;
 
   .gridWrapper {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(14, 1fr);
-    grid-auto-columns: 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      'lC lC lC lC'
-      'lC lC lC lC'
-      'lC lC lC lC'
-      'lC lC lC lC'
-      'pC pC pC pC'
-      'pC pC pC pC'
-      'mC mC mC mC'
-      'nC nC nC nC'
-      'nC nC nC nC'
-      'nC nC nC nC'
-      'nC nC nC nC'
-      'nC nC nC nC'
-      'fC fC fC fC'
-      'fC fC fC fC';
+    display: flex;
+    flex-flow: column nowrap;
+    min-height: 3004px;
     min-width: 390px;
     // height: 3004px;
     margin: 20px 25px 5px 25px;
   }
   .landingpageContainer {
     height: 100vh;
-    grid-area: lC;
   }
   .productsContainer {
     background-color: gray;
-    grid-area: pC;
   }
   .mediaBannerContainer {
     background-color: green;
-    grid-area: mC;
   }
   .newsContainer {
     background-color: hotpink;
-    grid-area: nC;
   }
   .footerContainer {
     background-color: indigo;
-    grid-area: fC;
   }
 }
