--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,8 @@ $primary-orange: #f6785f;
 $secondary-dark: #6f6c66;
 $secondary-light: #f0ede9;
 
+$mobile-margin: 35px;
+
 @import '../scss/layout/base';
 @import '../scss/components/landingpage/navbar';
 @import '../scss/components/landingpage/textBox';
