Edited img i PS and added to project

--- a/scss/components/landingpage/_textBox.scss
+++ b/scss/components/landingpage/_textBox.scss
@@ -8,6 +8,7 @@
   .landingpageHeader {
     color: $primary-black;
     font-family: $styled-font;
+    font-weight: normal;
     font-size: 45px;
     max-width: 310px;
     margin: 7px;
