--- a/scss/components/landingpage/_navbar.scss
+++ b/scss/components/landingpage/_navbar.scss
@@ -4,9 +4,11 @@
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-  margin: 0px;
+  margin: 20px 25px 0px 25px;
   height: 42px;
-  width: 100%;
+  .navLogo {
+    width: 72px;
+  }
   .iconsBox {
     list-style: none;
     padding: 0px;
@@ -20,8 +22,8 @@
     .fa-shopping-basket {
       color: $primary-black;
       font-size: 27px;
-      margin-left: 7px;
-      margin-right: 7px;
+      margin-left: 8px;
+      margin-right: 8px;
     }
 
     .fa-bars {
