--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -12,11 +12,14 @@ body {
     min-height: 3004px;
     min-width: 390px;
     // height: 3004px;
-    margin: 20px 25px 5px 25px;
   }
   .landingpageContainer {
     height: 100vh;
     margin-bottom: $mobile-margin;
+    background-image: url('/imgs/background.png');
+    background-size: cover;
+    background-position: right bottom;
+    background-repeat: no-repeat;
   }
   .productsContainer {
     background-color: gray;
