--- a/scss/components/landingpage/_textBox.scss
+++ b/scss/components/landingpage/_textBox.scss
@@ -4,7 +4,7 @@
   text-align: center;
   justify-content: center;
   align-items: center;
-  margin-top: 144px;
+  margin: 144px 25px 0px 25px;
   .landingpageHeader {
     color: $primary-black;
     font-family: $styled-font;
