--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -22,8 +22,7 @@ body {
     background-repeat: no-repeat;
   }
   .productsContainer {
-    background-color: gray;
-    margin-bottom: $mobile-margin;
+    // margin-bottom: $mobile-margin;
   }
   .mediaBannerContainer {
     background-color: green;
