--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,3 +19,4 @@ $mobile-margin: 35px;
 @import '../scss/layout/base';
 @import '../scss/components/landingpage/navbar';
 @import '../scss/components/landingpage/textBox';
+@import '../scss/components/productsView/productsContainer';
