--- a/scss/components/productsView/_productsContainer.scss
+++ b/scss/components/productsView/_productsContainer.scss
@@ -58,11 +58,13 @@
       .productName {
         margin: 0px;
         font-size: 20px;
+        color: $primary-black;
       }
       .productPrice {
         margin: 0px;
         font-size: 15px;
         font-weight: lighter;
+        color: $primary-black;
       }
     }
   }
