--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,3 +20,4 @@ $mobile-margin: 35px;
 @import '../scss/components/landingpage/navbar';
 @import '../scss/components/landingpage/textBox';
 @import '../scss/components/productsView/productsContainer';
+@import '../scss/components/mediaBanner/mediaBannerContainer';
