--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -15,6 +15,7 @@ body {
   }
   .landingpageContainer {
     height: 100vh;
+    width: 100%;
     margin-bottom: $mobile-margin;
     background-image: url('/imgs/background.png');
     background-size: cover;
