--- a/scss/components/mediaBanner/_mediaBannerContainer.scss
+++ b/scss/components/mediaBanner/_mediaBannerContainer.scss
@@ -9,9 +9,35 @@
   .mediaBannerTextBox {
     width: 38%;
     margin-left: 9%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
     .mediaBannerHeader {
       font-size: 17px;
       text-align: center;
+    }
+    .mediaBannerBtn {
+      width: 150px;
+      height: 35px;
+      font-family: $normal-font;
+      font-size: 15px;
+      color: $primary-black;
+      background-color: $primary-almost-white;
+      border: 1px solid #6f6c66;
+      cursor: pointer;
+
+      &:hover,
+      :active,
+      :disabled {
+        background-color: #f0ede9;
+      }
+      &:active {
+        border: none;
+      }
+      &:disabled {
+        opacity: 40%;
+      }
     }
   }
 }
