--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,3 +21,4 @@ $mobile-margin: 35px;
 @import '../scss/components/landingpage/textBox';
 @import '../scss/components/productsView/productsContainer';
 @import '../scss/components/mediaBanner/mediaBannerContainer';
+@import '../scss/components/newsLetter/newsContainer';
