Added footer styling

--- a/scss/components/mediaBanner/_mediaBannerContainer.scss
+++ b/scss/components/mediaBanner/_mediaBannerContainer.scss
@@ -21,6 +21,7 @@
     .mediaBannerBtn {
       width: 150px;
       height: 35px;
+      box-shadow: 2px 2px 3px #00000029;
       font-family: $normal-font;
       font-size: 15px;
       color: $primary-black;
