--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,3 +22,4 @@ $mobile-margin: 35px;
 @import '../scss/components/productsView/productsContainer';
 @import '../scss/components/mediaBanner/mediaBannerContainer';
 @import '../scss/components/newsLetter/newsContainer';
+@import '../scss/components/footer/footerContainer';
