--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -19,7 +19,7 @@ body {
     margin-bottom: $mobile-margin;
     background-image: url('/imgs/background.png');
     background-size: cover;
-    background-position: right bottom;
+    background-position: center;
     background-repeat: no-repeat;
   }
   // .productsContainer {
