--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,3 +23,10 @@ $mobile-margin: 35px;
 @import '../scss/components/mediaBanner/mediaBannerContainer';
 @import '../scss/components/newsLetter/newsContainer';
 @import '../scss/components/footer/footerContainer';
+
+@media screen and (min-width: 768px) {
+  @import '../scss/layout/tablet';
+}
+@media screen and (min-width: 1280px) {
+  @import '../scss/layout/desktop';
+}
