:sparkles:Tablet view done!

--- a/scss/components/footer/_footerContainer.scss
+++ b/scss/components/footer/_footerContainer.scss
@@ -27,7 +27,7 @@
   flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  margin: 20px 0px;
   .footerSubscribe {
     .subscribeHeader {
       color: $primary-almost-white;
