--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -9,7 +9,7 @@ body {
   .gridWrapper {
     display: flex;
     flex-flow: column nowrap;
-    min-height: 3004px;
+    // min-height: 3004px;
     min-width: 390px;
     // height: 3004px;
   }
