--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,8 @@ $secondary-dark: #6f6c66;
 $secondary-light: #f0ede9;
 
 $mobile-margin: 35px;
+$tablet-margin: 70px;
+$desktop-margin: 140px;
 
 @import '../scss/layout/base';
 @import '../scss/components/landingpage/navbar';
