--- a/scss/layout/_tablet.scss
+++ b/scss/layout/_tablet.scss
@@ -41,6 +41,7 @@ body {
   .productsContainer {
     display: flex;
     align-items: center;
+    margin: $tablet-margin 0px 0px 25px;
     .productsHeaderBox {
       margin-right: 37px;
       margin-left: 37px;
@@ -57,8 +58,11 @@ body {
       }
     }
   }
+
+  /*--Media banner--*/
+
   .mediaBannerContainer {
-    margin: auto;
+    margin: $tablet-margin auto;
     background-image: url('/imgs/media-banner-desktop.png');
     min-height: 180px;
     width: 95%;
@@ -78,6 +82,108 @@ body {
       }
       .mediaBannerText {
         display: flex;
+      }
+    }
+  }
+
+  /*--Newsview--*/
+  .newsContainer {
+    margin: 0px 25px $tablet-margin 25px;
+
+    .newsTextBox {
+      .newsHeader {
+        font-size: 30px;
+      }
+      .newsText {
+        font-size: 18px;
+      }
+    }
+    .newsImgWrapper {
+      justify-content: space-between;
+      width: 700px;
+      .newsImg {
+        width: 313px;
+        height: 470px;
+      }
+      .desktopNewsImg {
+        display: flex;
+      }
+    }
+  }
+
+  /*--Footer--*/
+  .footerContainer {
+    margin-top: $tablet-margin;
+    height: 282px;
+    flex-flow: column wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    .footerLogo {
+      margin: 10px 0px 0px 0px;
+      width: 55%;
+      height: 48px;
+      order: 1;
+      display: flex;
+      justify-content: center;
+    }
+    .footerMenuColumnsWrapper {
+      width: 30%;
+      height: 80%;
+      order: 3;
+
+      margin: auto;
+      .footerMenuColumn {
+        .footerMenuCategorie {
+          font-family: $styled-font;
+          font-size: 19px;
+          margin: 0px;
+        }
+        .footerMenuOptions {
+          list-style: none;
+          padding: 0px;
+          font-weight: normal;
+          font-size: 13px;
+          line-height: 2.8;
+        }
+      }
+    }
+    .footerSubscribeWrapper {
+      order: 2;
+      width: 55%;
+      height: 174px;
+      display: flex;
+      margin-top: 20px;
+      .footerSubscribe {
+        .subscribeHeader {
+          margin-top: 10px;
+          font-weight: normal;
+          width: 100%;
+          font-size: 17px;
+        }
+        .subscribeRegister {
+          margin: 10px auto;
+          width: 90%;
+          .subscribeInput {
+            padding: 4px 8px;
+            font-size: 13px;
+            width: 75%;
+          }
+          .subscribeBtn {
+            padding: 4px 2px;
+            font-size: 13px;
+
+            width: 22%;
+          }
+        }
+      }
+      .footerSoMeLinks {
+        padding: 0px;
+        width: 108px;
+
+        .fab {
+          color: $primary-almost-white;
+          font-size: 29px;
+        }
       }
     }
   }
