--- a/scss/layout/_desktop.scss
+++ b/scss/layout/_desktop.scss
@@ -1,1 +1,169 @@
-/* Tablet view main styling */
+/*--Landingpage--*/
+html,
+body {
+  .landingpageContainer {
+    .navWrapper {
+      height: 100px;
+    }
+    .navbar {
+      margin-top: 45px;
+      .navLogo {
+        width: 138px;
+      }
+      .iconsBox {
+        .fa-heart {
+          font-size: 27px;
+        }
+        .fa-shopping-basket {
+          height: 27px;
+        }
+        .logInBtn {
+          width: 152px;
+          height: 44px;
+          .logInText {
+            font-size: 1.3125em;
+          }
+        }
+      }
+      .navbarMenu {
+        .menuText {
+          font-size: 1.40625em;
+        }
+      }
+    }
+    .landingpageTextBox {
+      margin-top: 20%;
+      .landingpageHeader {
+        font-size: 4.6875em;
+      }
+      .landingpageSubheader {
+        font-size: 1.6875em;
+      }
+      .landingpageBtn {
+        width: 315px;
+        height: 77px;
+        font-size: 1.734375em;
+      }
+    }
+  }
+
+  /*--Productspage--*/
+
+  .productsContainer {
+    display: flex;
+    align-items: center;
+    margin: $tablet-margin 0px 0px 25px;
+    .productsHeaderBox {
+      margin-right: 37px;
+      margin-left: 37px;
+      margin-bottom: 90px;
+    }
+    .productsWrapper {
+      min-height: 427px;
+      .productBox {
+        .productImg {
+          width: 242px;
+          height: 363px;
+          margin-bottom: 20px;
+        }
+      }
+    }
+  }
+
+  /*--Media banner--*/
+
+  .mediaBannerContainer {
+    margin: $tablet-margin auto;
+    background-image: url('/imgs/media-banner-desktop.png');
+    min-height: 180px;
+    width: 95%;
+    border-radius: 20px;
+    max-width: 1588px;
+    .mediaBannerTextBox {
+      width: 60%;
+      min-width: 418px;
+      margin: 30px 40% 0px auto;
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: center;
+      align-items: center;
+      .mediaBannerHeader {
+        font-size: 25px;
+        margin: 15px 0px 0px 0px;
+      }
+      .mediaBannerText {
+        display: flex;
+      }
+    }
+  }
+
+  /*--Newsview--*/
+  .newsContainer {
+    margin: 0px 25px $tablet-margin 25px;
+
+    .newsTextBox {
+      .newsHeader {
+        font-size: 30px;
+      }
+      .newsText {
+        font-size: 18px;
+      }
+    }
+    .newsImgWrapper {
+      justify-content: space-between;
+      width: 700px;
+      .newsImg {
+        width: 313px;
+        height: 470px;
+      }
+      .desktopNewsImg {
+        display: flex;
+      }
+    }
+  }
+
+  /*--Footer--*/
+  .footerContainer {
+    margin-top: $tablet-margin;
+    height: 282px;
+    flex-flow: column wrap;
+    justify-content: flex-start;
+    .footerLogo {
+      margin: 12px 0px;
+      width: 55%;
+      min-height: 48px;
+      order: 1;
+      display: flex;
+      justify-content: center;
+    }
+    .footerMenuColumnsWrapper {
+      width: 30%;
+      height: 80%;
+      order: 3;
+      margin: 50px auto;
+    }
+    .footerSubscribeWrapper {
+      margin: 0px auto;
+      order: 2;
+      width: 55%;
+      height: 176px;
+
+      .footerSubscribe {
+        .subscribeHeader {
+          margin-bottom: 20px;
+          width: 100%;
+          font-size: 17px;
+        }
+        .subscribeRegister {
+          width: 90%;
+          .subscribeInput {
+            font-size: 9px;
+          }
+          .subscribeBtn {
+            font-size: 13px;
+          }
+        }
+      }
+    }
+  }
+}
