fixed fontsizes in landingpage

--- a/scss/components/landingpage/_navbar.scss
+++ b/scss/components/landingpage/_navbar.scss
@@ -105,6 +105,7 @@
   .navbarMenu {
     display: none;
     width: 45%;
+    max-width: 736px;
     list-style: none;
     padding: 0px;
     justify-content: space-between;
