--- a/scss/layout/_tablet.scss
+++ b/scss/layout/_tablet.scss
@@ -4,6 +4,7 @@ body {
   .landingpageContainer {
     background-image: url('/imgs/background-tablet.png');
     background-position: top center;
+    min-height: 460px;
     .navbar {
       width: 95%;
       .navLogo {
