--- a/scss/components/landingpage/_navbar.scss
+++ b/scss/components/landingpage/_navbar.scss
@@ -57,21 +57,108 @@
         }
       }
     }
-
-    .fa-bars {
-      color: $primary-orange;
-      font-size: 28px;
-      &:hover {
-        line {
-          stroke: #f6785fbf;
+    .menuBtn {
+      .btnToggle {
+        display: block;
+        position: relative;
+        top: 5px;
+        z-index: 1;
+        -webkit-user-select: none;
+        user-select: none;
+        .checkbox {
+          display: block;
+          width: 30px;
+          height: 30px;
+          position: absolute;
+          top: -7px;
+          left: -5px;
+          cursor: pointer;
+          opacity: 0;
+          z-index: 2;
+          -webkit-touch-callout: none;
+          &:hover ~ span {
+            background-color: #bfbfbe;
+          }
+          &:checked ~ span {
+            opacity: 1;
+            transform: rotate(45deg) translate(0px, -1px);
+            background: #232323;
+          }
+          &:checked ~ span:nth-last-child(3) {
+            opacity: 0;
+            transform: rotate(0deg) scale(0.2, 0.2);
+          }
+          &:checked ~ span:nth-last-child(2) {
+            transform: rotate(-45deg) translate(2px, -1px);
+          }
+          &:checked ~ ul {
+            transform: translate(-100%, 0%);
+          }
         }
-      }
-      &:active {
-        line {
-          stroke: #f6785f80;
+        span {
+          display: block;
+          width: 29px;
+          height: 4px;
+          margin-bottom: 5px;
+          position: relative;
+          background: $primary-orange;
+          border-radius: 3px;
+          z-index: 1;
+          transform-origin: 4px 0px;
+          transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+            background-color 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+            opacity 0.55s ease;
+          &:first-child {
+            transform-origin: 0% 0%;
+          }
+          &:nth-last-child(2) {
+            transform-origin: 0% 100%;
+          }
+        }
+        .insideMenu {
+          list-style: none;
+          text-align: center;
+          position: absolute;
+          width: 100vw;
+          margin: -100px 0 70px 70px;
+          padding-top: 125px;
+          padding-bottom: 50px;
+          background: $primary-almost-white;
+          -webkit-font-smoothing: antialiased;
+          transform-origin: 0% 0%;
+          transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+          .menuTitle {
+            padding: 10px 0px;
+            font-size: 22px;
+            font-family: $normal-font;
+            font-weight: lighter;
+            a {
+              text-decoration: none;
+              color: $primary-black;
+              transition: color 0.3s ease;
+              &:hover {
+                color: #f6785fbf;
+              }
+            }
+          }
         }
       }
     }
+
+    // .fa-bars {
+    //   color: $primary-orange;
+    //   font-size: 28px;
+    //   &:hover {
+    //     line {
+    //       stroke:
+    //     }
+    //   }
+    //   &:active {
+    //     line {
+    //       stroke: #f6785f80;
+    //     }
+    //   }
+    // }
 
     .logInBtn {
       display: none;
