--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -9,16 +9,14 @@ body {
   .gridWrapper {
     display: flex;
     flex-flow: column nowrap;
-    // min-height: 3004px;
     min-width: 390px;
-    // height: 3004px;
   }
   .landingpageContainer {
     height: 100vh;
     min-height: 560px;
     width: 100%;
     margin-bottom: $mobile-margin;
-    background-image: url('/imgs/background.png');
+    background-image: url('imgs/background.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -28,7 +26,7 @@ body {
   }
   .mediaBannerContainer {
     margin-bottom: $mobile-margin;
-    background-image: url('/imgs/media-banner-mobile.png');
+    background-image: url('imgs/media-banner-mobile.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
