Missed some imgs urls

--- a/scss/layout/_tablet.scss
+++ b/scss/layout/_tablet.scss
@@ -2,7 +2,7 @@
 html,
 body {
   .landingpageContainer {
-    background-image: url('/imgs/background-tablet.png');
+    background-image: url('../../imgs/background-tablet.png');
     background-position: top center;
     min-height: 460px;
     .navbar {
