--- a/scss/layout/_tablet.scss
+++ b/scss/layout/_tablet.scss
@@ -71,7 +71,7 @@ body {
 
   .mediaBannerContainer {
     margin: $tablet-margin auto;
-    background-image: url('../../../imgs/media-banner-desktop.png');
+    background-image: url('../imgs/media-banner-desktop.png');
     min-height: 180px;
     width: 95%;
     border-radius: 20px;
