Cleaned up scss and added mixin and variables

--- a/scss/components/footer/_footerContainer.scss
+++ b/scss/components/footer/_footerContainer.scss
@@ -24,10 +24,8 @@
   }
 }
 .footerSubscribeWrapper {
-  display: flex;
+  @include flexCenter;
   flex-flow: column nowrap;
-  align-items: center;
-  justify-content: center;
   margin: 20px 0px;
   .footerSubscribe {
     .subscribeHeader {
