Compressed imgs for web

--- a/scss/layout/_base.scss
+++ b/scss/layout/_base.scss
@@ -16,7 +16,7 @@ body {
     min-height: 560px;
     width: 100%;
     margin-bottom: $mobile-margin;
-    background-image: url('../imgs/background.png');
+    background-image: url('../imgs/background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -26,7 +26,7 @@ body {
   }
   .mediaBannerContainer {
     margin-bottom: $mobile-margin;
-    background-image: url('../imgs/media-banner-mobile.png');
+    background-image: url('../imgs/media-banner-mobile.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
