Added width and height to img missing this

--- a/scss/components/newsLetter/_newsContainer.scss
+++ b/scss/components/newsLetter/_newsContainer.scss
@@ -27,6 +27,8 @@
   .newsImg {
     width: 95%;
     border-radius: 20px;
+    max-width: 625px;
+    max-height: 938px;
   }
   .desktopNewsImg {
     display: none;
