--- a/scss/layout/_desktop.scss
+++ b/scss/layout/_desktop.scss
@@ -10,6 +10,7 @@ body {
       margin-top: 45px;
       .navLogo {
         width: 138px;
+        height: 88px;
       }
       .iconsBox {
         .fa-heart {
