--- a/scss/layout/_tablet.scss
+++ b/scss/layout/_tablet.scss
@@ -9,6 +9,7 @@ body {
       width: 95%;
       .navLogo {
         width: 78px;
+        height: 50px;
       }
       .iconsBox {
         .fa-heart {
